lab1/Test/L1-A-9-38.output
Error Type B at Line 37
Error Type B at Line 61
