lab1/Test/L1-A-9-38.cmm
float ;
int eCotRcGd5u1frU ( int VjZ3dKye ) {
  if ( ON )   if ( qHK1lGMCyHrxb )   return WQuKPV 
    ;
else   mKTn6lmsTbmUB ;


}
struct {
  struct bMcdVmEI3uRYUDwfN6 {
    struct WXLymMmHzW6cqGmId tEClSd7 ;
  }oav0cGdHz ;
  int ZieMMKiACvx ;
}z3I8qmzhMUZxLX 
;
int oKgH3RVgIIr ( ) {
  struct egAfSgT81EYLNwU uYYZVjLjBsQIElwNoo0Z = k4UAU 
    = pzKbTeDW8v7lzg || tuaHSdWAoufgGqueyt0 <= xlzIsT 
    * esjN9I3Rv ( GhRKECwPm1Kws6rN4ilw = hx5xa3 && vU7 
    == i4avVRlsXIjd + Eg1GZKpRADwZ2vSj1T / ! - THFNyJCFco 
    [ mzlmo < i9NyHKc [ eNK7YsxX9ppvyl = XL4sLyEAnBTaD4Jw 
    = d = dstIeyZa8pcoI4F != Ow_N + - ! ( U = WrdloDfeBP0 
    && DQt1 >= Xy / scxdHt ( IFR , o > DWASs95SDR && Y4ef4U 
    * 39124395.1243336784 ) . mLxF ) ] . _mOLtwUdFjTY0YUQVT3 
    * ! cH3lyZapap4Rkmj ( ) - 1128879596 . TsW6g8YOfeP 
    ] ) , __8i0zd [ 1873993130 ] ;
}
int ;
int ujgwf ( ) {
  HHefdjH ;
  mXtEVGDG2R1TGw ;
{
    uT0Ix ;
    while ( Cabf )     while ( G6n5vIbpvYmAV )     if 
      ( xXFh6SxLiZDYrKK9h5f )     while ( UlDKoFNzJfZXmzTrs 
      )     if ( g_5Mt3QBv_kRSu )     G6_lvOe4AdOvVzR 
else     while ( luKuEZEMmmz ) {
      pzr3n5pXilpLdL ;
      if ( J8WS )       Br2G3_fSFCzLBK48S ;
else       if ( LNEeg0Je64vwDo )       K ;


    }


else     j ;



  }}
int ;
int ;
int E2LCBDli_dQrLoXO051d , fBC5NicE8rw4aQb 

;
int ;
int ;
int ;
int ;
int ;
int mu8K3D52py_l0bJG_ int Ikg6qtHQhG , int aO_8SdXRz 
  ) {
}
